tests/compile/continue-1.c
/**
RUN: %scc %s 2>&1 | filecheck %s
*/

int
main()
{
  // CHECK: error: continue outside of loop
  continue;
}